# beyond-bellman-ctpe

./: .gitignore  README.md  pyproject.toml  requirements.txt
results/: journal_benchmark_candidates.csv  journal_benchmark_over_time.csv  journal_benchmark_selected.csv  journal_benchmark_summary.csv  journal_nonstationarity_heatmap.csv  journal_order_ablation.csv  journal_order_ablation_summary.csv  journal_pooling_ablation_summary.csv  stage2_bandwidth_validation.csv  stage2_extended_candidates.csv  stage2_extended_over_time.csv  stage2_extended_selected.csv  stage2_nonstationarity_heatmap.csv  stage2_order_ablation.csv  stage2_pilot_summary.csv  stage3_behavior_mismatch_heavy.csv  stage3_behavior_mismatch_smoke.csv  stage3_budget_nonstat_heavy.csv  stage3_budget_nonstat_smoke.csv  stage3_dt_sweep_heavy.csv  stage3_dt_sweep_smoke.csv  stage3_feature_ablation_heavy.csv  stage3_feature_ablation_smoke.csv  stage3_heavy_candidates_heavy.csv  stage3_heavy_candidates_smoke.csv  stage3_heavy_over_time_heavy.csv  stage3_heavy_over_time_smoke.csv  stage3_heavy_selected_heavy.csv  stage3_heavy_selected_smoke.csv  stage3_heavy_summary_heavy.csv  stage3_heavy_summary_smoke.csv  stage3_model_based_suite_heavy.csv  stage3_model_based_suite_smoke.csv  stage3_model_based_summary_heavy.csv  stage3_model_based_summary_smoke.csv  stage3_runtime_scaling_heavy.csv  stage3_runtime_scaling_smoke.csv  stage3_stability_heavy.csv  stage3_stability_smoke.csv  stage3_startup_ablation_heavy.csv  (+6 more)
scripts/: compile_manuscript.py  generate_figures.py  merge_external_results.py  reproduce_all.py  (+13 more)
(+38 files in other folders)
